# SB_Works

./: .gitignore  README.md  Require.md  SBchat.py  Schedule.md  Test.md  chat.py  fixchat.py  pyproject.toml  reminder.py  streamlit_app.py
airflow/dags/: audit.py
data/: data.parquet
data/movpar/year=2016/: data.parquet
data/movpar/year=2017/: data.parquet
data/movpar/year=2018/: data.parquet
data/movpar/year=2019/: data.parquet
data/movpar/year=2020/: data.parquet
data/movpar/year=2021/: data.parquet
data/movpar/year=2022/: data.parquet
data/parquet/: data.parquet
parquet/: chat_20240827.parquet  chat_20240828.parquet
src/sb_works/: SBChat.py  SH_chat.py  SJ_chat.py  SW_chat.py  TM_chat.py  chatbot.py
