[project]
name = "SB_Works"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GITSangWoo", email = "dogcenta@gmail.com"},
]
dependencies = [
    "streamlit>=1.37.1",
    "kafka-python>=2.0.2",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
